--- a/requirements.txt
+++ b/requirements.txt
@@ -4,24 +4,20 @@ annotated-types==0.7.0
 anyio==4.9.0
 astor==0.8.1
 beautifulsoup4==4.13.4
-colorama==0.4.6
+charset-normalizer==3.4.2
 colorlog==6.9.0
 contourpy==1.3.2
 cycler==0.12.1
 Cython==3.1.0
 decorator==5.2.1
-defusedxml==0.7.1
 easyocr==1.7.2
+einops==0.8.1
 fire==0.7.0
 fonttools==4.58.0
-fsspec==2025.3.2
 h11==0.16.0
 httpcore==1.0.9
-httpx==0.28.1
+huggingface-hub==0.31.2
 idna==3.10
-imageio==2.37.0
-kiwisolver==1.4.8
-lazy_loader==0.4
 lmdb==1.6.2
 lxml==5.4.0
 matplotlib==3.10.3
@@ -32,22 +28,26 @@ opencv-python-headless==4.11.0.86
 opt-einsum==3.3.0
 packaging==25.0
 paddleocr==2.10.0
-pandas==2.2.3
+paddlepaddle==3.0.0
 protobuf==3.20.2
+psutil==7.0.0
+py-cpuinfo==9.0.0
 pyclipper==1.3.0.post6
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyparsing==3.2.3
 python-bidi==0.6.6
-python-dateutil==2.9.0.post0
 python-docx==1.1.2
 pytz==2025.2
+PyYAML==6.0.2
 RapidFuzz==3.13.0
+regex==2024.11.6
+requests==2.32.3
+safetensors==0.5.3
 scikit-image==0.25.2
-scipy==1.15.3
+seaborn==0.13.2
 shapely==2.1.0
 simsimd==6.2.1
-six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 stringzilla==3.12.5
@@ -56,8 +56,9 @@ sympy==1.13.1
 termcolor==3.1.0
 themes==0.0.5
 tifffile==2025.5.10
-torch==2.5.1
-torchvision==0.20.1
-tqdm==4.67.1
-typing-inspection==0.4.0
-tzdata==2025.2
+timm==1.0.15
+tokenizers==0.21.1
+transformers==4.51.3
+ultralytics==8.3.135
+ultralytics-thop==2.0.14
+urllib3==2.4.0
