feat: bucket upload - blob, gemini api key rotation

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-API_KEY = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI'
+API_KEY1 = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI'
+API_KEY2 = 'AIzaSyCn2gWuWMUo116lOSbLT3AtkHE1FPpJ6z4'
+API_KEY3 = 'AIzaSyCxxiZ5bbTPa9lBj28AMPAlPxWwnVwXPBA'
+
 BUCKET_NAME = 'theme-qa-poc-gs-theme'
