--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-API_KEY1 = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI'
-API_KEY1 = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI'
-API_KEY1 = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI'
+API_KEY1 = 'AIzaSyDShLx6VrE-9YT3B3m0X9VHxxUkJDvfjk8'
+API_KEY2 = 'AIzaSyC48SqgmhDt9jPvqjPdqNTiJpADIwtX1CI' #gai-llm-poc
+API_KEY3 = 'AIzaSyDTg4O59Hw81jkTeNy1bwygvacT8QllzF4' #themes
 
 BUCKET_NAME = 'theme-qa-poc-gs-theme'
